--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,10 @@
 html {
-  font-family: sans-serif;
+  font-family: 'MuseoModerno', normal, sans-serif;
 }
 
 body {
   margin: 0;
-  
+  background-color: #F6F6F6;
 }
 
 img {
@@ -19,35 +19,50 @@ img {
   position: absolute;
   top: 40px;
   left: 490px;
+  width: 950px;
   display: flex;
   justify-content: space-between;
   color: white;
 }
 
-.main {
+/* .main {
 
+} */
+
+.benefits-list {
+  display: flex;
+  justify-content: space-around;
 }
 
-.first-background {
+
+/* .first-background {
   width: 100vw;
   background-image: url(../assets/images/backgrounds/bg.png);
   background-repeat: no-repeat;
   
-}
+} */
 
 .first-screen {
+  background-image: url(../assets/images/backgrounds/bg.png);
+  background-repeat: no-repeat;
+  /* background-size: 100vw; */
+  height: 600px;
   color: white;
 }
 
 
-.consult-background {
+/* .consult-background {
   width: 100vw;
   background-image: url(../assets/images/backgrounds/bg2.png);
   background-repeat: no-repeat;
-}
+} */
 
 .consult {
+  background-image: url(../assets/images/backgrounds/bg2.png);
+  background-repeat: no-repeat;
+  /* background-size: 100vw; */
   color: white;
+  height: 680px;
 }
 
 .btn {
@@ -57,9 +72,13 @@ img {
 
 }
 
+.companies {
+  font-family: 'MuseoModerno', cursive;
+}
+
 .custom {
   font-family: 'MuseoModerno', cursive;
-  color: C70101;
+  color: #C70101;
 }
 
 .contacts {
@@ -68,6 +87,21 @@ img {
 }
 
 .section {
-  width: 950px;
+  /* width: 950px; */
   border: 1px solid black;
+}
+
+.heading {
+  text-align: center;
+}
+
+.consult p {
+  text-align: center;
+}
+
+.forms {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  grid-row-gap: 10px;
 }
