--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,6 +10,8 @@ body {
   margin: 0;
   background-color: #ffffff;
   font-size: 14px;
+  line-height: 1.5;
+  height: auto;
 }
 
 img {
@@ -25,7 +27,7 @@ h2 {
 }
 
 .heading {
-  padding-top: 100px;
+  padding-top: 80px;
   text-transform: uppercase;
   text-align: center;
   font-size: 36px;
@@ -66,7 +68,12 @@ h2 {
 .logo,
 .info,
 .call {
-  padding: 20px;
+  margin-top: 20px;
+}
+
+.info p,
+.call p {
+  margin-top: 0;
 }
 
 .call p {
@@ -99,9 +106,22 @@ h2 {
   width: 1000px;
 }
 
+/*----------------------------------------- FIRST SCREEN -----------------------------------------*/
+
+
+
+.first-screen {
+  background-image: url(../assets/images/backgrounds/bg.png);
+  background-repeat: no-repeat;
+  background-size: 100vw;
+  height: 650px;
+  color: white;
+}
 
 .button-container {
   text-align: end;
+  /* padding-top: 52px; */
+
 }
 
 .title {
@@ -127,7 +147,7 @@ h2 {
 }
 
 .icons-item {
-  padding: 35px;
+  padding: 0 35px;
   text-align: center;
 }
 
@@ -135,19 +155,21 @@ h2 {
 
 
 .benefits {
-  height: 470px;
+  height: auto;
   background-color: #F6F6F6;
 }
 
 .benefits-heading {
+  margin-top: 0;
   margin-bottom: 65px;
 }
 
 .benefits-list {
   list-style-type: none;
-
   display: flex;
   justify-content: space-around;
+  margin-bottom: 0;
+  padding-bottom: 50px;
 }
 
 .benefits-list-item {
@@ -162,17 +184,14 @@ h2 {
 
 
 
-.first-screen {
-  background-image: url(../assets/images/backgrounds/bg.png);
-  background-repeat: no-repeat;
-  /* background-size: 100vw; */
-  height: 650px;
-  color: white;
-}
+
 
 /*----------------------------------------- CONSULT -----------------------------------------*/
 
-
+.consult-heading {
+  margin-top: 0;
+  text-align: left;
+}
 
 .consult {
   background-image: url(../assets/images/backgrounds/bg2.png);
@@ -226,13 +245,27 @@ h2 {
 
 /*----------------------------------------- CAROUSEL -----------------------------------------*/
 
-
-
-
-.carousel {
+.carousel-container {
   display: flex;
+  flex-wrap: nowrap;
   align-items: center;
 }
+
+
+
+.chevron {
+  width: 31px;
+}
+
+.chevron-left {
+  background-image: "assets/";
+}
+
+.slider {
+  margin: 100px 60px;
+}
+
+
 
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
@@ -270,6 +303,7 @@ h2 {
   display: flex;
   justify-content: center;
   list-style-type: none;
+  margin-bottom: 55px;
 }
 
 
@@ -296,6 +330,7 @@ h2 {
 }
 
 .btn-text {
+  font-size: 18px;
   display: block;
   transform: skewX(30deg);
 }
@@ -308,8 +343,35 @@ h2 {
   box-sizing: border-box;
   width: 303px;
   height: 442px;
+  line-height: 1.5em;
+  box-sizing: border-box;
+
 }
 
+.watch-list-item p {
+  font-weight: 300;
+}
+
+.watch-list-item ul {
+  font-weight: 300;
+  list-style: none;
+  padding: 15px;
+  text-align: start;
+}
+
+.watch-list-item ul li {
+  padding: 5px 15px;
+}
+
+.watch-list-item ul li::before {
+  content: "▪";
+  color: red;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+
+}
 .watch-list-item img {
   margin-top: 20px;
 }
@@ -317,19 +379,19 @@ h2 {
 .watch-list-item h3 {
   font-size: 16px;
   font-weight: 700;
+  margin: 15px 0;
 }
 
 .watch-list-item hr {
   width: 80%;
   color: #E8E8E8;
-  margin: 20px;
+  margin: 15px;
 }
 
 .buy {
   display: flex;
   align-content: center;
   justify-content: space-evenly;
-  align-items: center;
 }
 
 .buy button {
@@ -358,13 +420,19 @@ h2 {
 
 
 
-/*------------------------------- Отзывы --------------------------------*/
+/*------------------------------- REVIEW --------------------------------*/
+
+.reviews-container {
+  height: auto;
+  margin-bottom: 60px;
+  box-sizing: border-box;
+}
 
 .reviews-list {
   display: grid;
   grid-template-columns: 1fr 170px 700px 1fr;
-  grid-template-rows: repeat(3, 200px);
-  grid-gap: 20px;
+  grid-template-rows: repeat(3, 250px);
+  grid-gap: 60px;
   box-sizing: border-box;
   grid-template-areas: 
     ". pic1 text1 ."
@@ -400,6 +468,28 @@ h2 {
 
 }
 
+.reviews-name {
+  font-weight: 700;
+  font-size: 18px;
+  margin: 0;
+}
+
+.reviews-marathon {
+  font-weight: 500;
+  color: #646464;
+  margin: 0;
+
+}
+
+.reviews-text {
+  font-weight: 300;
+  font-size: 16px;
+  margin-bottom: 0;
+}
+
+
+
+
 .btn {
   background-color: #C70101;
   border: none;
@@ -412,6 +502,7 @@ h2 {
 
 .companies {
   font-family: 'MuseoModerno', cursive;
+  font-size: 18px;
 }
 
 .custom {
@@ -432,18 +523,54 @@ h2 {
 
 
 
-
+.mapp {
+  margin-top: 60px;
+  height: 630px;
+}
 
 .map {
-  z-index: 0;
+  position: relative;
+
+  margin-top: 60px;
 }
 
 .footer {
-  background-color: #C70101;
   position: absolute;
   /* z-index: 1; */
-  left: 730px;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
   /* bottom: 360px; */
   width: 460px;
   height: 270px;
+  text-align: center;
+  background-color: #C70101;
+ 
+}
+
+.contacts p:first-child {
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: 50px;
+}
+
+.contacts p:nth-child(2) {
+  font-size: 20px;
+  font-weight: 700;
+  margin-top: 36px;
+}
+
+
+.social-icons {
+  padding: 15px 120px;
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+
+}
+
+.f-ico {
+  position: absolute;
 }
