--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,7 +11,6 @@ body {
   background-color: #ffffff;
   font-size: 14px;
   line-height: 1.5;
-  height: auto;
 }
 
 img {
@@ -34,23 +33,36 @@ h2 {
   font-weight: 700;
 }
 
-/* .heading {
-  padding-top: 100px;
+.btn {
+  background-color: #C70101;
+  border: none;
+  border-radius: 5px;
   text-transform: uppercase;
-  text-align: center;
-  font-size: 36px;
-  font-weight: 700;
-  margin-bottom: 8px;
-} */
+  color: white;
+  padding: 20px;
+  cursor: pointer;
 
+}
 
+.btn:hover {
+  background-color: #af0000;
+}
+
+.btn:active {
+  cursor: pointer;
+  background-color: #970000;
+}
+
+.catalog-menu button:hover {
+  cursor: pointer;
+
+}
 
 /*----------------------------------------- HEADER -----------------------------------------*/
 
 .button-container a {
   color: white;
 }
-
 
 .header {
   position: absolute;
@@ -89,28 +101,21 @@ h2 {
   height: 32px;
 }
 
-
 .main {
-  /* width: 1050px; */
   margin-left: auto;
   margin-right: auto;
 }
 
-.first-container,
-.benefits-container,
-.consult-container,
-.carousel-container,
-.catalog-container,
-.reviews-container {
+
+
+.container {
   margin: auto;
   width: 1000px;
 }
 
-/*----------------------------------------- FIRST SCREEN -----------------------------------------*/
+/*----------------------------------------- INTRODUCTION -----------------------------------------*/
 
-
-
-.first-screen {
+.introduction {
   background-image: url(../assets/images/backgrounds/bg.png);
   background-repeat: no-repeat;
   background-size: 100vw;
@@ -153,7 +158,6 @@ h2 {
 
 /*----------------------------------------- BENEFITS -----------------------------------------*/
 
-
 .benefits {
   height: auto;
   background-color: #F6F6F6;
@@ -182,10 +186,6 @@ h2 {
   padding-bottom: 20px;
 }
 
-
-
-
-
 /*----------------------------------------- CONSULT -----------------------------------------*/
 
 .consult-heading {
@@ -202,7 +202,7 @@ h2 {
 }
 
 .consult h2 {
-  text-align-last: left;
+  text-align: left;
 }
 
 
@@ -240,34 +240,66 @@ h2 {
   
 }
 
-
-
-
 /*----------------------------------------- CAROUSEL -----------------------------------------*/
 
-.carousel-container {
+.mySwiper {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
 }
 
-
-
 .chevron {
   width: 31px;
+  height: 50px;
+  border: none;
+  cursor: pointer;
+  color: #000000;
 }
 
 .chevron-left {
-  background-image: "assets/";
+  background-image: url(assets/images/chevrons/chevron_left_solid.png);
 }
 
-.slider {
+.chevron-rigth {
+  background-image: url(assets/images/chevrons/chevron_right_solid.png);
+}
+
+.swiper {
   margin: 100px 60px;
 }
 
+.swiper-wrapper {
+  width: 750px;
+  height: 530px;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 
-/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
 
 .watch-list {
   list-style-type: none;
@@ -285,9 +317,7 @@ h2 {
 
 }
 
-
-/*----------------------------------------- CATALOG -----------------------------------------*/
-
+/*----------------------------------------- CATALOG MENU -----------------------------------------*/
 
 .catalog {
   margin: auto;
@@ -305,7 +335,6 @@ h2 {
   list-style-type: none;
   margin-bottom: 55px;
 }
-
 
 .catalog-menu-item {
   transform: skewX(-30deg);
@@ -335,9 +364,7 @@ h2 {
   transform: skewX(30deg);
 }
 
-/* .btn-fitness {
-  background-color: #C70101;
-} */
+/*----------------------------------------- CATALOG -----------------------------------------*/
 
 .watch-list-item {
   box-sizing: border-box;
@@ -357,6 +384,7 @@ h2 {
   list-style: none;
   padding: 15px;
   text-align: start;
+  margin: 0;
 }
 
 .watch-list-item ul li {
@@ -372,6 +400,7 @@ h2 {
   margin-left: -1em;
 
 }
+
 .watch-list-item img {
   margin-top: 20px;
 }
@@ -417,8 +446,6 @@ h2 {
   margin-top: 0;
   margin-bottom: 20px;
 }
-
-
 
 /*------------------------------- REVIEW --------------------------------*/
 
@@ -489,17 +516,6 @@ h2 {
 
 
 
-
-.btn {
-  background-color: #C70101;
-  border: none;
-  border-radius: 5px;
-  text-transform: uppercase;
-  color: white;
-  padding: 20px;
-
-}
-
 .companies {
   font-family: 'MuseoModerno', cursive;
   font-size: 18px;
@@ -515,13 +531,7 @@ h2 {
   background-color: #C70101;
 }
 
-/* .section {
-  width: 950px; 
-  height: auto;
-   border: 1px solid black; 
-} */
-
-
+/*------------------------------- MAP --------------------------------*/
 
 .mapp {
   margin-top: 60px;
@@ -536,13 +546,11 @@ h2 {
 
 .footer {
   position: absolute;
-  /* z-index: 1; */
   top: 0;
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  /* bottom: 360px; */
   width: 460px;
   height: 270px;
   text-align: center;
@@ -571,6 +579,31 @@ h2 {
 
 }
 
+
+
 .f-ico {
   position: absolute;
+}
+
+.circle {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  border: 3px solid white;
+  border-radius: 50%;
+}
+
+.circle img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.circle-facebook img{
+  /* top: 10px;
+  left: 17px; */
+  
 }
