--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -242,27 +242,34 @@ h2 {
 
 /*----------------------------------------- CAROUSEL -----------------------------------------*/
 
-.mySwiper {
+.carousel-container {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center; 
+}
+
+/* .mySwiper {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
-}
+} */
 
 .chevron {
+  flex-shrink: 0;
   width: 31px;
   height: 50px;
   border: none;
   cursor: pointer;
-  color: #000000;
+  background-color: white;
 }
 
-.chevron-left {
-  background-image: url(assets/images/chevrons/chevron_left_solid.png);
-}
+/* .chevron-left {
+  background-image: url(/assets/images/chevrons/chevron_left_solid.png);
+} */
 
-.chevron-rigth {
-  background-image: url(assets/images/chevrons/chevron_right_solid.png);
-}
+/* .chevron-right {
+  background-image: url(/assets/images/chevrons/chevron_right_solid.png);
+} */
 
 .swiper {
   margin: 100px 60px;
@@ -293,8 +300,8 @@ h2 {
 
 .swiper-slide img {
   display: block;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   object-fit: cover;
 }
 
